--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
