--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-dispatch": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "rechart": "^0.0.1",
     "recharts": "^2.1.12",
+    "redux": "^4.2.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
