--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-daum-postcode": "^3.1.1",
     "react-dispatch": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
