--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://moon115599.github.io/smallgiftAdmin",
+  "homepage": "https://moon115599.github.io/SmallGift-Manager",
   "name": "admin-page",
   "version": "0.1.0",
   "private": true,
