--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
+https://moon115599.github.io/
 {
-  "homepage": "https://moon115599.github.io/SmallGift-Manager/",
+  "homepage": "https://moon115599.github.io/",
   "name": "admin-page",
   "version": "0.1.0",
   "private": true,
