--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
     "import/prefer-default-export": "off",
     "import/no-unresolved": "off",
     "import/order": "off",
+//    "react/no-unknown-property": ['error', { ignore: ['css'] }],
     "import/no-anonymous-default-export": "off",
     "import/no-extraneous-dependencies": [
       "error",
