Revert "homepage 이름 변경"
This reverts commit 99ff88e27f6a378a8de7c3e7d78fc3e29f8ff9cc.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-https://moon115599.github.io/
 {
-  "homepage": "https://moon115599.github.io/",
+  "homepage": "https://moon115599.github.io/SmallGift-Manager/",
   "name": "admin-page",
   "version": "0.1.0",
   "private": true,
